# perl5

./: Configure  MANIFEST  Makefile.SH
hints/: cygwin.sh
win32/: CMakeLists.txt
